--- a/NOVA/Views/Shared/_Layout _yonetim_stok.cshtml
+++ b/NOVA/Views/Shared/_Layout _yonetim_stok.cshtml
@@ -1,32 +1,35 @@
-﻿@model NOVA.Models.Login
-
-<!DOCTYPE html>
-<html lang="tr"
-      class="light-style layout-menu-fixed"
-      dir="ltr"
-      data-theme="theme-default"
-      data-assets-path="\assets\"
-      data-template="vertical-menu-template-free">
+﻿<!DOCTYPE html>
+<html>
 <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE9">
-    <meta name="viewport" content="user-scalable=no, width=device-width" />
-    <title>Nova | Efece Galvaniz/Fiyatsız Hammadde Listesi</title>
-
+    <title>Nova | Efece Galvaniz</title>
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/assets/img/icons/brands/Nova_White.png" />
+    <script src="~/Scripts/jquery-3.6.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+          rel="stylesheet" type="text/css" />
     <link href="\assets\boxicons-2.1.2\css\boxicons.css" rel="stylesheet" type="text/css" />
     <link href="\assets\boxicons-2.1.2\css\animations.css" rel="stylesheet" type="text/css" />
     <link href="\assets\boxicons-2.1.2\css\transformations.css" rel="stylesheet" type="text/css" />
+
+    <!-- Core CSS -->
     <link rel="stylesheet" type="text/css" href="\assets\vendor\css\core.css" class="template-customizer-core-css" />
     <link rel="stylesheet" type="text/css" href="\assets\vendor\css\theme-default.css" class="template-customizer-theme-css" />
     <link rel="stylesheet" type="text/css" href="\assets\css\demo.css" />
 
+    <!-- Vendors CSS -->
     <link rel="stylesheet" type="text/css" href="\assets\vendor\libs\perfect-scrollbar\perfect-scrollbar.css" />
 
     <link rel="stylesheet" type="text/css" href="\assets\vendor\libs/apex-charts/apex-charts.css" />
+
+    <!-- Page CSS -->
+    <!-- Helpers -->
     <script type="text/javascript" src="\assets\vendor\js\helpers.js"></script>
 
     <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
@@ -34,19 +37,15 @@
     <script type="text/javascript" src="\assets\js\config.js"></script>
     <script src="/Scripts/jquery.validate.js" type='text/javascript'></script>
     <script src="/Scripts/jquery.validate.unobtrusive.js" type='text/javascript'></script>
-
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
-          rel="stylesheet" type="text/css" />
-
-    <!-- Icons. Uncomment required icon fonts -->
-
-
+    <script>
+       
+        var listfk = [];
+        var list = [];
+      
+        
+    </script>
 </head>
 <body>
-
 
     <div class="layout-wrapper layout-content-navbar">
         <div class="layout-container">
@@ -80,7 +79,7 @@
                             <span class="menu-header-text">Modüller</span>
                         </li>
                         <!-- Layouts -->
-                        <li class="menu-item open" style="display: @ViewBag.DisplaySatis">
+                        <li class="menu-item" style="display: @ViewBag.DisplaySatis">
                             <a href="javascript:void(0);" class="menu-link menu-toggle">
                                 <i class="menu-icon tf-icons bx bx-dollar"></i>
                                 <div data-i18n="Layouts">Satış</div>
@@ -92,28 +91,27 @@
                                         <div data-i18n="Without menu">Stok Değeri</div>
                                     </a>
                                 </li>
-                                <li class="menu-item" style="font-weight:normal;display: @ViewBag.DisplaySiparis">
+                                <li class="menu-item" style="display: @ViewBag.DisplaySiparis">
                                     <a href="@Url.Action("DetayliSiparis", "Satis")" class="menu-link">
                                         <div data-i18n="Without menu">Detaylı Sipariş Raporu</div>
                                     </a>
                                 </li>
                                 <li class="menu-item" style="font-weight:normal;display: @ViewBag.DisplayFiyatliStok">
                                     <a href="@Url.Action("HammaddeListesi", "Satis")" class="menu-link">
-                                        <div data-i18n="Without menu">* Fabrika Stok</div>
+                                        <div data-i18n="Without menu">*Fabrika Stok</div>
                                     </a>
                                 </li>
-                                <li class="menu-item active" style="font-weight:normal;display: @ViewBag.DisplayFiyatsizStok">
+                                <li class="menu-item" style="font-weight:normal;display: @ViewBag.DisplayFiyatsizStok">
                                     <a href="@Url.Action("FiyatsizHammaddeListesi", "Satis")" class="menu-link">
                                         <div data-i18n="Without menu">Fabrika Stok</div>
                                     </a>
                                 </li>
-                               
+
                                 <li class="menu-item" style="font-weight:normal;display: @ViewBag.DisplayZiyaretPlani">
                                     <a href="@Url.Action("ZiyaretPlanlari", "Satis")" class="menu-link">
                                         <div data-i18n="Without menu">Müşteri İlişkileri Yönetimi</div>
                                     </a>
                                 </li>
-
                             </ul>
                         </li>
                         <li class="menu-item" style="display: @ViewBag.DisplaySevkiyat">
@@ -205,13 +203,13 @@
 
                             </ul>
                         </li>
-                        <li class="menu-item" style="display: @ViewBag.DisplayYonetim">
+                        <li class="menu-item active open" style="display: @ViewBag.DisplayYonetim">
                             <a href="javascript:void(0);" class="menu-link menu-toggle" data-bs-toggle="tooltip" data-bs-offset="0,4" data-bs-placement="top" data-bs-html="true" data-bs-original-title="<i class='bx bx-laptop bx-flashing' ></i> <span>Modül üzerinde çalışılmaktadır</span>">
                                 <i class="menu-icon tf-icons bx bx-sitemap"></i>
                                 <div data-i18n="Misc">Yönetim</div>
                             </a>
                             <ul class="menu-sub">
-                                <li class="menu-item" style="display: @ViewBag.Stok">
+                                <li class="menu-item active" style="display: @ViewBag.Stok">
                                     <a href="@Url.Action("Stok", "Yonetim")" class="menu-link">
                                         <div data-i18n="Without menu">Stok Değeri</div>
                                     </a>
@@ -261,86 +259,8 @@
             </aside>
 
             <div class="layout-page">
-                <nav class="layout-navbar container-fluid navbar navbar-expand-xl navbar-detached align-items-center bg-navbar-theme sticky-top position-sticky "
-                     id="layout-navbar" style="max-height:50px">
-                    <div class="layout-menu-toggle navbar-nav align-items-xl-center me-3 me-xl-0 d-xl-none">
-                        <a class="nav-item nav-link px-0 me-xl-4" href="javascript:void(0)">
-                            <i class="bx bx-menu bx-sm"></i>
-                        </a>
-                    </div>
-                    <script>
-                        function getPlatform() {
-                            const allPlatforms = ['Win32', 'Win64', 'Windows', 'WinCE', 'Android', 'iPhone', 'iPad', 'iPod'];
-                            return allPlatforms.find(item => item === navigator.platform);
-                        }
-
-                    </script>
-                    <div class="navbar-nav-right d-flex align-items-center" id="navbar-collapse">
-                        <!-- Search -->
-                        <div class="navbar-nav align-items-center">
-                            <div class="nav-item d-flex align-items-center">
-
-                                <i id="click" class="bx bx-search fs-4 lh-0 keywords"></i>
-                                <input style="max-width:200px"
-                                       type="text"
-                                       class="form-control border-0 shadow-none"
-                                       id="search"
-                                       placeholder="Arama"
-                                       aria-label="Arama"
-                                       onkeyup="myFunction()" />
-                            </div>
-                        </div>
-                        <!-- /Search -->
-
-                        <ul class="navbar-nav flex-row align-items-center ms-auto">
 
 
-                            <!-- User -->
-                            <li class="nav-item navbar-dropdown dropdown-user dropdown">
-                                <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);" data-bs-toggle="dropdown">
-                                    <div class="avatar avatar-online">
-                                        @{
-                                            string s = ViewBag.Id + ".png?" + DateTime.Now.Ticks.ToString();
-                                        }
-                                        <object data="/assets/img/avatars/@s" type="image/png" class="w-px-40 h-auto rounded-circle">
-                                            <img src="/assets/img/avatars/7.png" class="w-px-40 h-auto rounded-circle">
-                                        </object>
-                                    </div>
-                                </a>
-                                <ul class="dropdown-menu dropdown-menu-end">
-                                    <li>
-                                        <a class="dropdown-item" href='@Url.Action("Index","Profil")'>
-                                            <div class="d-flex">
-                                                <div class="flex-shrink-0 me-3">
-                                                    <div class="avatar avatar-online">
-                                                        <object data="/assets/img/avatars/@s" type="image/png" class="w-px-40 h-auto rounded-circle">
-                                                            <img src="/assets/img/avatars/7.png" class="w-px-40 h-auto rounded-circle">
-                                                        </object>
-                                                    </div>
-                                                </div>
-                                                <div class="flex-grow-1">
-                                                    <span class="fw-semibold d-block">@Request.Cookies["Name"].Value</span>
-                                                    <small class="text-muted">Yetki: @Request.Cookies["RoleName"].Value</small>
-                                                </div>
-                                            </div>
-                                        </a>
-                                    </li>
-
-                                    <li>
-                                        <a href="javascript:void(0);" class="dropdown-item" data-bs-toggle="modal"
-                                           data-bs-target="#cikis">
-                                            <i class="bx bx-power-off me-2"></i>
-                                            <span class="align-middle">Oturumu Kapat</span>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <!--/ User -->
-                        </ul>
-                    </div>
-
-
-                </nav>
                 <div id="cikis" class="modal fade" tabindex="-1" role="dialog">
                     <div class="modal-dialog modal-dialog-centered" role="document">
                         <div class="modal-content">
@@ -375,14 +295,13 @@
                             </div>
 
 
-
                         </div>
                     </div>
                 </div>
                 @RenderBody()
                 <!-- / Content -->
                 <!-- Footer -->
-                <footer class="content-footer footer bg-footer-theme">
+                <footer class="content-footer footer bg-footer-theme mb-0">
                     <div class="container-xxl d-flex flex-wrap justify-content-between py-2 flex-md-row flex-column">
                         <div style="padding-left:40%">
                             ©
@@ -394,7 +313,7 @@
                 </footer>
                 <!-- / Footer -->
 
-                <div class="content-backdrop fade"></div>
+
             </div>
             <!-- Content wrapper -->
         </div>
@@ -403,21 +322,34 @@
 
     <!-- Overlay -->
     <div class="layout-overlay layout-menu-toggle"></div>
+    <script src="https://unpkg.com/tableexport.jquery.plugin/tableExport.min.js"></script>
+    <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/bootstrap-table.min.js"></script>
+    <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/bootstrap-table-locale-all.min.js"></script>
+    <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/export/bootstrap-table-export.min.js"></script>
+    <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
+    <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/mobile/bootstrap-table-mobile.min.js"></script>*
+    <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/group-by-v2/bootstrap-table-group-by.min.js"></script>
+    <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/sticky-header/bootstrap-table-sticky-header.js"></script>*
+    <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/fixed-columns/bootstrap-table-fixed-columns.js"></script>
+   
+    <script src="~/jsPDF/jspdf.umd.min.js"></script>
+    <script src="~/jsPDF/polyfills.umd.min.js"></script>
 
 
+    <!-- Core JS -->
+    <!-- build:js assets/vendor/js/core.js -->
 
 
-    <script>
-        var browserZoomLevel = Math.round(window.devicePixelRatio * 100);
-        if (browserZoomLevel == 125 || browserZoomLevel == 150) {
-            document.body.style.zoom = "80%";
-        }
-        if (browserZoomLevel == 100) {
-            document.body.style.zoom = "100%";
-        }
-    </script>
+    <script type="text/javascript" src="/assets/vendor/js/menu.js"></script>
+    <!-- endbuild -->
+    <!-- Main JS -->
+    <script type="text/javascript" src="/assets/js/main.js"></script>
+
+    <!-- Page JS -->
+    <script type="text/javascript" src="/assets/js/dashboards-analytics.js"></script>
+
+
 
     @RenderSection("scripts", required: false)
 </body>
-
 </html>
