--- a/NOVA/Views/Shared/_Layout.cshtml
+++ b/NOVA/Views/Shared/_Layout.cshtml
@@ -45,6 +45,13 @@
             let data = await response.json()
             return data;
         }
+        var stokfiatlar = null;
+        async function getstokfiatAsync() {
+            var url = "http://192.168.2.13:83/api/stok/stokfiat";
+            let response = await fetch(url);
+            let data = await response.json()
+            return data;
+        }
     </script>
 </head>
 <body>
@@ -90,7 +97,7 @@
                             <ul class="menu-sub">
                                 <li class="menu-item active" style="display: @ViewBag.DisplayStok">
                                     <a href="@Url.Action("Index", "Satis")" class="menu-link">
-                                        <div data-i18n="Without menu">Stok</div>
+                                        <div data-i18n="Without menu">Stok Değeri</div>
                                     </a>
                                 </li>
                                 <li class="menu-item" style="display: @ViewBag.DisplaySiparis">
@@ -210,6 +217,13 @@
                                 <i class="menu-icon tf-icons bx bx-sitemap"></i>
                                 <div data-i18n="Misc">Yönetim</div>
                             </a>
+                            <ul class="menu-sub">
+                                <li class="menu-item" style="display: @ViewBag.Stok">
+                                    <a href="@Url.Action("Stok", "Yonetim")" class="menu-link">
+                                        <div data-i18n="Without menu">Stok Değeri</div>
+                                    </a>
+                                </li>
+                            </ul>
                         </li>
                         <li class="menu-item" style="display: @ViewBag.Display">
                             <a href="javascript:void(0);" class="menu-link menu-toggle">
@@ -322,7 +336,7 @@
     <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/bootstrap-table-locale-all.min.js"></script>
     <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/export/bootstrap-table-export.min.js"></script>
     <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
-    @*<script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/mobile/bootstrap-table-mobile.min.js"></script>*@
+   <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/mobile/bootstrap-table-mobile.min.js"></script>
 
 
 
