--- a/NOVA/Views/Shared/_Layout_yonetim.cshtml
+++ b/NOVA/Views/Shared/_Layout_yonetim.cshtml
@@ -99,7 +99,7 @@
                                 <ul class="menu-sub">
                                     <li class="menu-item" style="display: @ViewBag.DisplayStok">
                                         <a href="@Url.Action("Index", "Satis")" class="menu-link">
-                                            <div data-i18n="Without menu">Stok</div>
+                                            <div data-i18n="Without menu">Stok Değeri</div>
                                         </a>
                                     </li>
                                     <li class="menu-item" style="display: @ViewBag.DisplaySiparis">
@@ -188,14 +188,14 @@
                                 </a>
                             </li>
                             <li class="menu-item" style="display: @ViewBag.DisplayMuhasebe">
-                                <a href="javascript:void(0);" class="menu-link menu-toggle" >
+                                <a href="javascript:void(0);" class="menu-link menu-toggle">
                                     <i class="menu-icon tf-icons bx bx-calculator"></i>
                                     <div data-i18n="Misc">Muhasebe</div>
                                 </a>
                             </li>
                             <li class="menu-item" style="display: @ViewBag.Display4">
 
-                                <a href="javascript:void(0);" class="menu-link menu-toggle" >
+                                <a href="javascript:void(0);" class="menu-link menu-toggle">
                                     <i class="menu-icon tf-icons bx bx-male-female"></i>
                                     <div data-i18n="Misc">İnsan Kaynakları</div>
                                 </a>
@@ -223,6 +223,13 @@
                                     <i class="menu-icon tf-icons bx bx-sitemap"></i>
                                     <div data-i18n="Misc">Yönetim</div>
                                 </a>
+                                <ul class="menu-sub">
+                                    <li class="menu-item" style="display: @ViewBag.Stok">
+                                        <a href="@Url.Action("Stok", "Yonetim")" class="menu-link">
+                                            <div data-i18n="Without menu">Stok Değeri</div>
+                                        </a>
+                                    </li>
+                                </ul>
                             </li>
                             <li class="menu-item active open" style="display: @ViewBag.Display">
                                 <a href="javascript:void(0);" class="menu-link menu-toggle">
@@ -282,7 +289,7 @@
                                     <ul class="menu-sub">
                                         <li class="menu-item" style="display: @ViewBag.DisplayStok">
                                             <a href="@Url.Action("Index", "Satis")" class="menu-link">
-                                                <div data-i18n="Without menu">Stok</div>
+                                                <div data-i18n="Without menu">Stok Değeri</div>
                                             </a>
                                         </li>
                                         <li class="menu-item" style="display: @ViewBag.DisplaySiparis">
@@ -308,7 +315,7 @@
                                     </ul>
                                 </li>
 
-                                <li class="menu-item" style="display: @ViewBag.DisplaySevkiyat" >
+                                <li class="menu-item" style="display: @ViewBag.DisplaySevkiyat">
                                     <a href="javascript:void(0);" class="menu-link menu-toggle">
                                         <i class="menu-icon tf-icons bx bxs-truck"></i>
                                         <div data-i18n="Layouts">Sevkiyat</div>
@@ -373,7 +380,7 @@
                                 </li>
                                 <li class="menu-item" style="display: @ViewBag.Display4">
 
-                                    <a href="javascript:void(0);" class="menu-link menu-toggle" >
+                                    <a href="javascript:void(0);" class="menu-link menu-toggle">
                                         <i class="menu-icon tf-icons bx bx-male-female"></i>
                                         <div data-i18n="Misc">İnsan Kaynakları</div>
                                     </a>
@@ -459,7 +466,7 @@
                                     <ul class="menu-sub">
                                         <li class="menu-item" style="display: @ViewBag.DisplayStok">
                                             <a href="@Url.Action("Index", "Satis")" class="menu-link">
-                                                <div data-i18n="Without menu">Stok</div>
+                                                <div data-i18n="Without menu">Stok Değeri</div>
                                             </a>
                                         </li>
                                         <li class="menu-item" style="display: @ViewBag.DisplaySiparis">
@@ -485,7 +492,7 @@
                                     </ul>
                                 </li>
 
-                                <li class="menu-item" style="display: @ViewBag.DisplaySevkiyat" >
+                                <li class="menu-item" style="display: @ViewBag.DisplaySevkiyat">
                                     <a href="javascript:void(0);" class="menu-link menu-toggle">
                                         <i class="menu-icon tf-icons bx bxs-truck"></i>
                                         <div data-i18n="Layouts">Sevkiyat</div>
@@ -550,7 +557,7 @@
                                 </li>
                                 <li class="menu-item" style="display: @ViewBag.Display4">
 
-                                    <a href="javascript:void(0);" class="menu-link menu-toggle" >
+                                    <a href="javascript:void(0);" class="menu-link menu-toggle">
                                         <i class="menu-icon tf-icons bx bx-male-female"></i>
                                         <div data-i18n="Misc">İnsan Kaynakları</div>
                                     </a>
