--- a/NOVA/Views/Uretim/Index.cshtml
+++ b/NOVA/Views/Uretim/Index.cshtml
@@ -158,7 +158,7 @@
                         <ul class="menu-sub">
                             <li class="menu-item" style="display: @ViewBag.DisplayStok">
                                 <a href="@Url.Action("Index", "Satis" )" class="menu-link">
-                                    <div data-i18n="Without menu">Stok</div>
+                                    <div data-i18n="Without menu">Stok Değeri</div>
                                 </a>
                             </li>
                             <li class="menu-item" style="display: @ViewBag.DisplaySiparis">
