--- a/NOVA/Views/Satis/ZiyaretPlanlari.cshtml
+++ b/NOVA/Views/Satis/ZiyaretPlanlari.cshtml
@@ -36,15 +36,15 @@
 
         <div class="modal-dialog modal-dialog-scrollable" role="document" style="max-width: 85vw !important;">
             
-            <div class="modal-content">
+            <div class="modal-content h-100">
                 <div class="modal-header">
                     <button id="closebtn" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="centercontent" name="ilkspinner">
                     <i class="fa fa-spinner fa-spin fa-fw fa-2x"></i>
                 </div>
-                <div class="modal-body mb-3" style="overflow-y: hidden; max-width: 100vw !important; height: 75vh; background-color: white ">
-                    <iframe id="musif" loading="lazy" style="width: 100%; height: 100%;border:1px solid black;" src="@Url.Action("ZiyaretKaydiListesi")"></iframe>
+                <div class="modal-body p-0" style="max-width: 100vw !important; max-height: 100vh; background-color: white ">
+                    <iframe id="musif" loading="lazy" style="width: 100%; height: 100%;" src="@Url.Action("ZiyaretKaydiListesi")"></iframe>
                 </div>
             </div>
 
@@ -58,7 +58,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 
-                <div class="modal-body p-1" style="overflow-y: hidden; max-width: 100vw !important; height: 75vh; background-color: white ">
+                <div class="modal-body p-1" style=" max-width: 100vw !important; height: 75vh; background-color: white ">
                     @{
                         if (ViewBag.OzelYetki == true)
                         {
