--- a/NOVA/Views/Shared/_Layout_ZiyaretPlanlari.cshtml
+++ b/NOVA/Views/Shared/_Layout_ZiyaretPlanlari.cshtml
@@ -599,7 +599,7 @@
                             <ul class="menu-sub">
                                 <li class="menu-item" style="display: @ViewBag.DisplayStok">
                                     <a href="@Url.Action("Index", "Satis")" class="menu-link">
-                                        <div data-i18n="Without menu">Stok</div>
+                                        <div data-i18n="Without menu">Stok Değeri</div>
                                     </a>
                                 </li>
                                 <li class="menu-item" style="display: @ViewBag.DisplaySiparis">
@@ -617,7 +617,7 @@
                                         <div data-i18n="Without menu">Fabrika Stok</div>
                                     </a>
                                 </li>
-                                
+
                                 <li class="menu-item active" style="font-weight:normal;display: @ViewBag.DisplayZiyaretPlani">
                                     <a href="@Url.Action("ZiyaretPlanlari", "Satis")" class="menu-link">
                                         <div data-i18n="Without menu">Müşteri İlişkileri Yönetimi</div>
@@ -719,6 +719,13 @@
                                 <i class="menu-icon tf-icons bx bx-sitemap"></i>
                                 <div data-i18n="Misc">Yönetim</div>
                             </a>
+                            <ul class="menu-sub">
+                                <li class="menu-item" style="display: @ViewBag.Stok">
+                                    <a href="@Url.Action("Stok", "Yonetim")" class="menu-link">
+                                        <div data-i18n="Without menu">Stok Değeri</div>
+                                    </a>
+                                </li>
+                            </ul>
                         </li>
                         <li class="menu-item" style="display: @ViewBag.Display">
                             <a href="javascript:void(0);" class="menu-link menu-toggle">
