--- a/NOVA/Views/Shared/_Layout_anasayfa.cshtml
+++ b/NOVA/Views/Shared/_Layout_anasayfa.cshtml
@@ -95,7 +95,7 @@
                         <ul class="menu-sub">
                             <li class="menu-item" style="display: @ViewBag.DisplayStok">
                                 <a href="@Url.Action("Index", "Satis")" class="menu-link">
-                                    <div data-i18n="Without menu">Stok</div>
+                                    <div data-i18n="Without menu">Stok Değeri</div>
                                 </a>
                             </li>
                             <li class="menu-item" style="display: @ViewBag.DisplaySiparis">
@@ -218,9 +218,9 @@
                             <div data-i18n="Misc">Yönetim</div>
                         </a>
                         <ul class="menu-sub">
-                            <li class="menu-item" style="display: @ViewBag.DisplayIstatistik">
-                                <a href="@Url.Action("Index", "Yonetim")" class="menu-link">
-                                    <div data-i18n="Without menu">Personel İstatistikleri</div>
+                            <li class="menu-item" style="display: @ViewBag.Stok">
+                                <a href="@Url.Action("Stok", "Yonetim")" class="menu-link">
+                                    <div data-i18n="Without menu">Stok Değeri</div>
                                 </a>
                             </li>
                         </ul>
