--- a/NOVA/Views/Shared/_Layout_detayli_Sip.cshtml
+++ b/NOVA/Views/Shared/_Layout_detayli_Sip.cshtml
@@ -89,7 +89,7 @@
                             <ul class="menu-sub">
                                 <li class="menu-item" style="display: @ViewBag.DisplayStok">
                                     <a href="@Url.Action("Index", "Satis")" class="menu-link">
-                                        <div data-i18n="Without menu">Stok</div>
+                                        <div data-i18n="Without menu">Stok Değeri</div>
                                     </a>
                                 </li>
                                 <li class="menu-item active" style="font-weight:normal;display: @ViewBag.DisplaySiparis">
@@ -209,6 +209,13 @@
                                 <i class="menu-icon tf-icons bx bx-sitemap"></i>
                                 <div data-i18n="Misc">Yönetim</div>
                             </a>
+                            <ul class="menu-sub">
+                                <li class="menu-item" style="display: @ViewBag.Stok">
+                                    <a href="@Url.Action("Stok", "Yonetim")" class="menu-link">
+                                        <div data-i18n="Without menu">Stok Değeri</div>
+                                    </a>
+                                </li>
+                            </ul>
                         </li>
                         <li class="menu-item" style="display: @ViewBag.Display">
                             <a href="javascript:void(0);" class="menu-link menu-toggle">
