--- a/NOVA/Views/Shared/_Layout_inside.cshtml
+++ b/NOVA/Views/Shared/_Layout_inside.cshtml
@@ -99,7 +99,7 @@
                                 <ul class="menu-sub">
                                     <li class="menu-item active" style="display: @ViewBag.DisplayStok">
                                         <a href="@Url.Action("Index", "Satis")" class="menu-link">
-                                            <div data-i18n="Without menu">Stok</div>
+                                            <div data-i18n="Without menu">Stok Değeri</div>
                                         </a>
                                     </li>
                                     <li class="menu-item" style="display: @ViewBag.DisplaySiparis">
@@ -219,6 +219,13 @@
                                     <i class="menu-icon tf-icons bx bx-sitemap"></i>
                                     <div data-i18n="Misc">Yönetim</div>
                                 </a>
+                                <ul class="menu-sub">
+                                    <li class="menu-item" style="display: @ViewBag.Stok">
+                                        <a href="@Url.Action("Stok", "Yonetim")" class="menu-link">
+                                            <div data-i18n="Without menu">Stok Değeri</div>
+                                        </a>
+                                    </li>
+                                </ul>
                             </li>
                             <li class="menu-item" style="display: @ViewBag.Display">
                                 <a href="javascript:void(0);" class="menu-link menu-toggle">
@@ -278,7 +285,7 @@
                                     <ul class="menu-sub">
                                         <li class="menu-item" style="display: @ViewBag.DisplayStok">
                                             <a href="@Url.Action("Index", "Satis")" class="menu-link">
-                                                <div data-i18n="Without menu">Stok</div>
+                                                <div data-i18n="Without menu">Stok Değeri</div>
                                             </a>
                                         </li>
                                         <li class="menu-item active" style="font-weight:normal;display: @ViewBag.DisplayFiyatliStok">
@@ -452,7 +459,7 @@
                                     <ul class="menu-sub">
                                         <li class="menu-item" style="display: @ViewBag.DisplayStok">
                                             <a href="@Url.Action("Index", "Satis")" class="menu-link">
-                                                <div data-i18n="Without menu">Stok</div>
+                                                <div data-i18n="Without menu">Stok Değeri</div>
                                             </a>
                                         </li>
                                         <li class="menu-item active" style="font-weight:normal;display: @ViewBag.DisplayFiyatliStok">
@@ -625,7 +632,7 @@
                                 <ul class="menu-sub">
                                     <li class="menu-item" style="display: @ViewBag.DisplayStok">
                                         <a href="@Url.Action("Index", "Satis")" class="menu-link">
-                                            <div data-i18n="Without menu">Stok</div>
+                                            <div data-i18n="Without menu">Stok Değeri</div>
                                         </a>
                                     </li>
                                     <li class="menu-item active" style="font-weight:normal;display: @ViewBag.DisplaySiparis">
@@ -802,7 +809,7 @@
                                 <ul class="menu-sub">
                                     <li class="menu-item" style="display: @ViewBag.DisplayStok">
                                         <a href="@Url.Action("Index", "Satis")" class="menu-link">
-                                            <div data-i18n="Without menu">Stok</div>
+                                            <div data-i18n="Without menu">Stok Değeri</div>
                                         </a>
                                     </li>
                                     <li class="menu-item active" style="font-weight:normal;display: @ViewBag.DisplayFiyatliStok">
