--- a/NOVA/Views/Shared/_Layout_profil.cshtml
+++ b/NOVA/Views/Shared/_Layout_profil.cshtml
@@ -97,7 +97,7 @@
                         <ul class="menu-sub">
                             <li class="menu-item" style="display: @ViewBag.DisplayStok">
                                 <a href="@Url.Action("Index", "Satis")" class="menu-link">
-                                    <div data-i18n="Without menu">Stok</div>
+                                    <div data-i18n="Without menu">Stok Değeri</div>
                                 </a>
                             </li>
                             <li class="menu-item" style="display: @ViewBag.DisplaySiparis">
@@ -129,7 +129,7 @@
                     </li>
 
                     <li class="menu-item" style="display: @ViewBag.DisplaySevkiyat">
-                        <a href="javascript:void(0);" class="menu-link menu-toggle" >
+                        <a href="javascript:void(0);" class="menu-link menu-toggle">
                             <i class="menu-icon tf-icons bx bxs-truck"></i>
                             <div data-i18n="Layouts">Sevkiyat</div>
                         </a>
@@ -193,7 +193,7 @@
                     </li>
                     <li class="menu-item" style="display: @ViewBag.Display4">
 
-                        <a href="javascript:void(0);" class="menu-link menu-toggle" >
+                        <a href="javascript:void(0);" class="menu-link menu-toggle">
                             <i class="menu-icon tf-icons bx bx-male-female"></i>
                             <div data-i18n="Misc">İnsan Kaynakları</div>
                         </a>
@@ -221,6 +221,13 @@
                             <i class="menu-icon tf-icons bx bx-sitemap"></i>
                             <div data-i18n="Misc">Yönetim</div>
                         </a>
+                        <ul class="menu-sub">
+                            <li class="menu-item" style="display: @ViewBag.Stok">
+                                <a href="@Url.Action("Stok", "Yonetim")" class="menu-link">
+                                    <div data-i18n="Without menu">Stok Değeri</div>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="menu-item" style="display: @ViewBag.Display">
                         <a href="javascript:void(0);" class="menu-link menu-toggle">
