--- a/NOVA/Views/Shared/_Layout_sevkiyat.cshtml
+++ b/NOVA/Views/Shared/_Layout_sevkiyat.cshtml
@@ -89,7 +89,7 @@
                             <ul class="menu-sub">
                                 <li class="menu-item" style="display: @ViewBag.DisplayStok">
                                     <a href="@Url.Action("Index", "Satis")" class="menu-link">
-                                        <div data-i18n="Without menu">Stok</div>
+                                        <div data-i18n="Without menu">Stok Değeri</div>
                                     </a>
                                 </li>
                                 <li class="menu-item" style="display: @ViewBag.DisplaySiparis">
@@ -107,7 +107,7 @@
                                         <div data-i18n="Without menu">Fabrika Stok</div>
                                     </a>
                                 </li>
-                               
+
                                 <li class="menu-item" style="font-weight:normal;display: @ViewBag.DisplayZiyaretPlani">
                                     <a href="@Url.Action("ZiyaretPlanlari", "Satis")" class="menu-link">
                                         <div data-i18n="Without menu">Müşteri İlişkileri Yönetimi</div>
@@ -116,7 +116,7 @@
                             </ul>
                         </li>
                         <li class="menu-item active open" style="display: @ViewBag.DisplaySevkiyat">
-                            <a href="javascript:void(0);" class="menu-link menu-toggle" >
+                            <a href="javascript:void(0);" class="menu-link menu-toggle">
                                 <i class="menu-icon tf-icons bx bxs-truck"></i>
                                 <div data-i18n="Layouts">Sevkiyat</div>
                             </a>
@@ -155,7 +155,7 @@
 
                         </li>
                         <li class="menu-item" style="display: @ViewBag.DisplaySatinAlma">
-                            <a href="javascript:void(0);" class="menu-link menu-toggle" >
+                            <a href="javascript:void(0);" class="menu-link menu-toggle">
                                 <i class="menu-icon tf-icons bx bx-credit-card"></i>
                                 <div data-i18n="Authentications">Satın Alma</div>
                             </a>
@@ -209,6 +209,13 @@
                                 <i class="menu-icon tf-icons bx bx-sitemap"></i>
                                 <div data-i18n="Misc">Yönetim</div>
                             </a>
+                            <ul class="menu-sub">
+                                <li class="menu-item" style="display: @ViewBag.Stok">
+                                    <a href="@Url.Action("Stok", "Yonetim")" class="menu-link">
+                                        <div data-i18n="Without menu">Stok Değeri</div>
+                                    </a>
+                                </li>
+                            </ul>
                         </li>
                         <li class="menu-item" style="display: @ViewBag.Display">
                             <a href="javascript:void(0);" class="menu-link menu-toggle">
